Add TensorFlow Lite support

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,12 @@
 apply plugin: 'com.android.application'
-apply plugin: 'de.undercouch.download'
 
 android {
     compileSdkVersion 26
+
+    lintOptions {
+        abortOnError false
+    }
+
     defaultConfig {
         applicationId "io.androidthings.neuralcandy"
         minSdkVersion 26
@@ -22,29 +26,10 @@ android {
             assets.srcDirs = ['./assets']
         }
     }
-}
 
-
-import de.undercouch.gradle.tasks.download.Download
-task downloadFile(type: Download) {
-    src 'https://storage.googleapis.com/download.tensorflow.org/models/inception5h.zip'
-    dest projectDir.toString() + '/../../assets/inception.zip'
-}
-task unzip(type: Copy) {
-    from zipTree(projectDir.toString() + '/../../assets/inception.zip')
-    into file(projectDir.toString() + '/assets')
-}
-unzip.dependsOn downloadFile
-
-project.afterEvaluate {
-    if (!(new File(projectDir.toString() + '/assets')).exists()) {
-        preBuild.dependsOn unzip
-    }
-}
-
-repositories {
-    flatDir {
-        dirs 'libs'
+    // Required to enable TF Lite to read model files directly from assets/
+    aaptOptions {
+        noCompress "tflite"
     }
 }
 
@@ -54,6 +39,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'org.tensorflow:tensorflow-android:1.2.0'
+    implementation 'org.tensorflow:tensorflow-lite:0.1.1'
     compileOnly 'com.google.android.things:androidthings:+'
 }
