Add TensorFlow Lite support

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'org.tensorflow:tensorflow-lite:0.1.1'
+    compile 'com.android.support:support-annotations:25.4.0'
     compileOnly 'com.google.android.things:androidthings:+'
 }
